welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: Int does not take parameters
		if (nums(n)==nums(n+1)+5 && (nums(n)==nums(n+2)-1 || n(ums(n+2)>=num(n)-1-2 || nums(n+2)<=nums(n)-1+2)))
                                                                      ^